--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <textarea class="input" placeholder="Digite seu texto:"></textarea>
 
             <div class="regras">
-            <img class="icon__alert" src="/assets/danger.svg">
+            <img class="icon__alert" src="assets/danger.svg">
             <h5>Apenas letras minúsculas e sem acento.</h5>
             </div>
 
